--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,6 +4,15 @@ logfile=/dev/null
 logfile_maxbytes=0
 loglevel=debug
 
+[unix_http_server]
+file=/var/run/supervisord.sock
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisord.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:sysrepod]
 command=/usr/local/bin/sysrepod -d -l3
 autorestart=true
@@ -22,5 +31,12 @@ autorestart=true
 redirect_stderr=true
 priority=3
 
+[program:setup]
+command=/usr/local/bin/setup.sh
+startsecs=0
+exitcodes=0
+autorestart=unexpected
+priority=4
+
 [include]
-files=/etc/supervidord.d
+files=/etc/supervisord.d/*.conf
