--- a/supervisord.conf
+++ b/supervisord.conf
@@ -31,8 +31,8 @@ autorestart=true
 redirect_stderr=true
 priority=3
 
-[program:post-setup]
-command=/usr/local/bin/post-setup.sh
+[program:setup]
+command=/usr/local/bin/setup.sh
 startsecs=0
 exitcodes=0
 autorestart=unexpected
