--- a/examples/mynetconf/docker-compose.yml
+++ b/examples/mynetconf/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   netopeer2:
-    image: blueonap/netconf-pnp-simulator:v2.3.0
+    image: quay.io/blue-onap/netconf-pnp-simulator:v2.7.0
     container_name: mynetconf
     restart: always
     ports:
