--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,6 +11,7 @@ env:
   CONTAINER_PUSH_REGISTRY: quay.io
   LOCAL_IMAGE_TAG: netconf-pnp-simulator:latest
   REMOTE_IMAGE_TAG: quay.io/blue-onap/netconf-pnp-simulator:latest
+  TRIVY_VERSION: 0.5.3
 
 jobs:
   build:
@@ -43,3 +44,11 @@ jobs:
 
     - name: Push to registry
       run: docker push $REMOTE_IMAGE_TAG
+
+    - name: Install Trivy
+      run: |
+          wget https://github.com/aquasecurity/trivy/releases/download/v${TRIVY_VERSION}/trivy_${TRIVY_VERSION}_Linux-64bit.tar.gz
+          tar xzf trivy_${TRIVY_VERSION}_Linux-64bit.tar.gz
+          
+    - name: Run Trivy
+      run: ./trivy --exit-code 1 $LOCAL_IMAGE_TAG
