Multi-job GH Action

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skipsdist = True
 [testenv]
 changedir = tests
 docker =
-  netconf-pnp-simulator:latest
+  {env:LOCAL_IMAGE_TAG:netconf-pnp-simulator:latest}
 
 deps =
   ncclient
