Cleaner log messages using zlog. Closes #11
- Python package 'loguru' installed at system level and pre-configured
  with environment variables LOGURU_FORMAT and LOGURU_COLORIZE

- Log verbosity reduced to INFO

- Disable xtrace in entrypoint.sh. Re-enable by setting
  SHELL_XTRACE=true

- Remove examples/test Yang modules

--- a/examples/mynetconf/docker-compose.yml
+++ b/examples/mynetconf/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   netopeer2:
-    image: quay.io/blue-onap/netconf-pnp-simulator:v2.7.1
+    image: quay.io/blue-onap/netconf-pnp-simulator:v2.7.2
     container_name: mynetconf
     restart: always
     ports:
@@ -10,3 +10,5 @@ services:
       - "6513:6513"
     volumes:
       - ./:/config/modules/mynetconf
+    environment:
+      - SHELL_XTRACE=false
