--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,16 +24,8 @@ logfile=/dev/null
 logfile_maxbytes=0
 loglevel=info
 
-[program:sysrepod]
-command=/opt/bin/sysrepod -d -l3
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-priority=1
-
 [program:sysrepo-plugind]
-command=/opt/bin/sysrepo-plugind -d -l3
+command=/opt/bin/sysrepo-plugind -d -v4
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
