--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,10 @@ docker =
   {env:LOCAL_IMAGE_TAG:netconf-pnp-simulator:latest}
 
 deps =
+  pytest
   ncclient
-  discover
-commands = discover -v
+commands = pytest -v
+
+[pytest]
+log_level = INFO
+log_format = %(asctime)s.%(msecs)03d %(levelname)-5s [%(name)s] %(message)s
