Force Python3 in tox
In some environments Python 2.7 is still the default

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@
 # ============LICENSE_END=========================================================
 
 [tox]
+envlist = py3
 requires = tox-docker
 skipsdist = True
 
